--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,14 @@ header {
   padding: var(--wrap-pad);
 }
 
+input[type="number"] {
+  font-size: 16px;
+}
+
+html, body {
+  touch-action: manipulation;
+}
+
 h1 {
   font-size: clamp(16px, 2vw, 20px);
   margin: 0;
